--- a/iosgame/Base.lproj/Main.storyboard
+++ b/iosgame/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UJH-85-wMm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Yry-Lb-pWH">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,6 +9,24 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--How To Play View Controller-->
+        <scene sceneID="1pI-PN-pbL">
+            <objects>
+                <viewController id="ECD-sX-kDb" customClass="HowToPlayViewController" customModule="iosgame" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kXS-F2-wYP"/>
+                        <viewControllerLayoutGuide type="bottom" id="ntu-cu-Yh6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sFU-Ve-xzo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oFu-dW-dpr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="228" y="223"/>
+        </scene>
         <!--Shop View Controller-->
         <scene sceneID="lwS-tw-yYs">
             <objects>
@@ -25,7 +43,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="apc-hJ-fgR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1420" y="149"/>
+            <point key="canvasLocation" x="-642" y="582"/>
         </scene>
         <!--Ain Menu View Controller-->
         <scene sceneID="9Xu-aT-eIK">
@@ -40,10 +58,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="BV1-FR-VrT" kind="show" identifier="game" id="rl6-Va-bl3"/>
+                        <segue destination="UJH-85-wMm" kind="show" identifier="shop" id="kZl-nZ-dXB"/>
+                        <segue destination="ECD-sX-kDb" kind="show" identifier="howtoplay" id="Nxn-Yc-uDf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="95A-Fh-g5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-609" y="191"/>
+            <point key="canvasLocation" x="-1497" y="171"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -57,7 +80,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="175" y="172"/>
+            <point key="canvasLocation" x="-642" y="-361"/>
         </scene>
     </scenes>
 </document>
